--- a/package.json
+++ b/package.json
@@ -8,15 +8,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@types/js-yaml": "^4.0.5",
+    "date-fns": "^2.28.0",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "12.0.9",
+    "prismjs": "^1.26.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rehype-katex": "5.0.0",
+    "remark-external-links": "8.0.0",
+    "remark-math": "3.0.1"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.9",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
+    "next-mdx-remote": "^3.0.8",
+    "node-sass-glob-importer": "^5.3.2",
+    "postcss": "^8.4.6",
+    "postcss-custom-media": "8.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.3.1",
+    "resolve-url-loader": "4.0.0",
+    "sass": "^1.49.0",
+    "typescript": "4.5.5",
+    "yaml-loader": "^0.6.0"
   }
 }
