Fix document format.
Fix document format.

Modify config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
     "./.vscode/custom.css-data.json"
   ],
   "[markdown]": {
-  }
+  },
+  "frontMatter.framework.startCommand": "yarn dev",
+  "frontMatter.preview.host": "http://localhost:3000"
 }
