--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "now-build": "yum install libuuid-devel libmount-devel zlib-devel && cp /lib64/{libuuid,libmount,libblkid,libz}.so.1 node_modules/canvas/build/Release/ && yarn build"
+  },
+  "resolutions": {
+    "node-canvas-with-twemoji/canvas": "2.6.1"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@types/js-yaml": "^4.0.5",
     "@types/react-infinite-scroller": "^1.2.2",
+    "canvas": "2.6.1",
     "date-fns": "^2.28.0",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
@@ -18,6 +23,7 @@
     "js-yaml": "^4.1.0",
     "mdx-bundler": "^8.0.1",
     "next": "12.0.9",
+    "node-canvas-with-twemoji": "^0.1.8",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
