Update og:image and implement embed syntax. #1

--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "node-canvas-with-twemoji": "^0.1.8",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
+    "react-codepen-embed": "^1.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-icons-converter": "^1.1.4",
     "react-infinite-scroller": "^1.2.5",
+    "react-lite-youtube-embed": "^2.2.1-a",
+    "react-twitter-embed": "^4.0.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-citation": "^0.2.5",
