--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,12 @@
-process.env.NEXT_PUBLIC_GA_ID=""
+NEXT_PUBLIC_META_SITE_DESCRIPTION=""
+NEXT_PUBLIC_META_SITE_NAME=""
+NEXT_PUBLIC_META_SITE_URL="http://localhost:3000"
+
+NEXT_PUBLIC_MANAGE_PAGES_PATH="data/pages"
+NEXT_PUBLIC_MANAGE_CONTENTS_PATH="data/docs"
+NEXT_PUBLIC_MANAGE_MEDIA_PATH="data/images"
+NEXT_PUBLIC_MANAGE_GOOGLE_ANALYTICS_ID=""
+NEXT_PUBLIC_MANAGE_GITHUB_REP_URL="https://github.com/uuki/dev/"
+NEXT_PUBLIC_MANAGE_EMAIL="uuki@gmail.com"
+NEXT_PUBLIC_MANAGE_TWITTER="uuki_dev"
+NEXT_PUBLIC_MANAGE_GITHUB="uuki"
