--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# data
+src/data/drafts
+
+# developments
+*.frag
+*.glsl
+
 # dependencies
 .nvmrc
 /node_modules
