--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "yarn clean && next build && next-sitemap --config sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rimraf \"**/.DS_Store\" && rimraf \"public/!(static)**\"",
+    "clean": "rimraf \"**/.DS_Store\" && rimraf \"public/!(static|media)**\"",
     "now-build": "yum install libuuid-devel libmount-devel zlib-devel && cp /lib64/{libuuid,libmount,libblkid,libz}.so.1 node_modules/canvas/build/Release/ && yarn build"
   },
   "resolutions": {
