--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "file-loader": "^6.2.0",
     "js-yaml-loader": "^1.2.2",
     "next-mdx-remote": "^3.0.8",
     "next-sitemap": "^3.1.11",
