--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ src/data/**/private/*.mdx
 
 # production
 /build
+/public/*
+!media
+!static
 
 # misc
 .DS_Store
@@ -42,8 +45,3 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-
-# rss
-atom.xml
-feed.xml
-feed.json
