--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/react-dom": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.2",
+    "@types/throttle-debounce": "^5.0.0",
     "canvas": "2.6.1",
+    "clsx": "^1.2.1",
     "date-fns": "^2.28.0",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
@@ -35,6 +38,7 @@
     "react-lite-youtube-embed": "^2.2.1-a",
     "react-twitter-embed": "^4.0.4",
     "reading-time": "^1.5.0",
+    "recoil": "^0.7.6",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-citation": "^0.2.5",
     "rehype-katex": "^6.0.2",
@@ -43,7 +47,8 @@
     "remark-external-links": "8.0.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -60,6 +65,9 @@
     "next-sitemap": "^3.1.11",
     "node-sass-glob-importer": "^5.3.2",
     "postcss": "^8.4.6",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-import": "^15.0.0",
+    "postcss-nested": "^6.0.0",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.3.1",
     "resolve-url-loader": "4.0.0",
