--- a/package.json
+++ b/package.json
@@ -9,17 +9,14 @@
     "clean": "rimraf \"**/.DS_Store\" && rimraf \"public/!(static|media)**\"",
     "now-build": "yum install libuuid-devel libmount-devel zlib-devel && cp /lib64/{libuuid,libmount,libblkid,libz}.so.1 node_modules/canvas/build/Release/ && yarn build"
   },
-  "resolutions": {
-    "node-canvas-with-twemoji/canvas": "2.6.1"
-  },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@napi-rs/canvas": "^0.1.52",
     "@types/js-yaml": "^4.0.5",
     "@types/react-dom": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/throttle-debounce": "^5.0.0",
     "@types/ua-parser-js": "^0.7.36",
-    "canvas": "2.6.1",
     "clsx": "^1.2.1",
     "compare-versions": "^5.0.1",
     "date-fns": "^2.28.0",
@@ -28,8 +25,7 @@
     "hastscript": "^7.0.2",
     "js-yaml": "^4.1.0",
     "mdx-bundler": "^8.0.1",
-    "next": "12.0.9",
-    "node-canvas-with-twemoji": "^0.1.8",
+    "next": "12.3.4",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-codepen-embed": "^1.1.0",
