--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "17.0.2",
     "react-codepen-embed": "^1.1.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "4.12.0",
     "react-icons-converter": "^1.1.4",
     "react-infinite-scroller": "^1.2.5",
     "react-lite-youtube-embed": "^2.2.1-a",
